@@ -22,6 +22,9 @@ SetCompressor /SOLID lzma
 
 # Define application name and installer file name
 Name GNUSim8085
+!ifndef MINGW_HOME
+  !define MINGW_HOME "/usr/i586-mingw32msvc"
+!endif
 !ifdef INC_GTK
   OutFile @PACKAGE@-@VERSION@-installer.exe
 !else
@@ -100,12 +103,12 @@ SectionIn RO
   SetOutPath $INSTDIR
   !system 'make'
   !system 'make DESTDIR=`pwd`/win32 install'
-  !system 'cp /usr/i586-mingw32msvc/bin/libgtksourceview-2.0-0.dll win32/bin/'
-  !system 'cp /usr/i586-mingw32msvc/bin/libxml2.dll win32/bin/'
-  !system 'cp /usr/i586-mingw32msvc/share/gtksourceview-2.0/language-specs/language2.rng data/'
-  !system 'cp /usr/i586-mingw32msvc/share/gtksourceview-2.0/language-specs/def.lang data/'
-  !system 'cp /usr/i586-mingw32msvc/share/gtksourceview-2.0/styles/styles.rng data/'
-  !system 'cp /usr/i586-mingw32msvc/share/gtksourceview-2.0/styles/classic.xml data/'
+  !system 'cp ${MINGW_HOME}/bin/libgtksourceview-2.0-0.dll win32/bin/'
+  !system 'cp ${MINGW_HOME}/bin/libxml2.dll win32/bin/'
+  !system 'cp ${MINGW_HOME}/share/gtksourceview-2.0/language-specs/language2.rng data/'
+  !system 'cp ${MINGW_HOME}/share/gtksourceview-2.0/language-specs/def.lang data/'
+  !system 'cp ${MINGW_HOME}/share/gtksourceview-2.0/styles/styles.rng data/'
+  !system 'cp ${MINGW_HOME}/share/gtksourceview-2.0/styles/classic.xml data/'
   File AUTHORS
   File ChangeLog
   File COPYING
