@@ -1,3 +1,8 @@
+2010-08-22  Onkar Shinde  <onkarshinde@gmail.com>
+
+	* installer.nsi.in: Allow specifying mingw home directory via command
+	line arguments when creating installer.
+
 2010-08-17  Onkar Shinde  <onkarshinde@gmail.com>
 
 	* src/*.c, src/*.h, src/Makefile.am: Add editable I/O listing as a tab.
